2004-07-11  Benjamin Otte  <otte@gnome.org>

	* gst/gstclock.h:
	  GST_SECOND shouldn't cause a conversion to unsigned.
	* testsuite/clock/.cvsignore:
	* testsuite/clock/Makefile.am:
	* testsuite/clock/signedness.c: (main):
	  make sure it never will again

2004-07-11  Andy Wingo  <wingo@pobox.com>

	* gst/gstbin.c (gst_bin_add_func): If we're adding an element
	whose state is higher than the bin state, raise the bin state to
	ensure that bin state := highest child state.
	
2004-07-11  Andy Wingo  <wingo@pobox.com>

	* gst/gstbin.c (gst_bin_foreach): New static function. Calls a
	procedure on the children of a bin. Assumes that the procedure can
	change the set of children.
	(set_kid_state_func): New static function.
	(gst_bin_change_state): Use gst_bin_foreach to call
	set_kid_state_func. Fixes a bug: if a child had a state-change
	handler that removes it from the bin, there would be a segfault.
	Hopefully it should also work in the case where the state-change
	handler on one child adds or removes other children. In any case,
	fixes should go to gst_bin_foreach.

2004-07-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstelement.c: (gst_element_set_state):
	  compatibility fix for latest plugins release.  Change loop back
	  to while {}

2004-07-09  Wim Taymans  <wim@fluendo.com>

	* gst/gstbin.c: (gst_bin_remove), (gst_bin_dispose):
	* gst/gstthread.c: (gst_thread_dispose), (gst_thread_catch),
	(gst_thread_main_loop):
	Since remove is virtual in GstBin we must not assume the 
	elements GList to have anothing useful.
	Add some more logging to GstThread and be a bit more paranoid
	when resetting the scheduler.
	Set the state of the bin to NULL before removing the children.

2004-07-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* testsuite/threads/Makefile.am:
	* testsuite/threads/threadg.c:
	  added test to check if problem when removing all elements from a
	  GstThread before setting GstThread state to NULL
